--- a/index2.html
+++ b/index2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Emotion Mapper (Data-Driven)</title>
+  <title>Emotion Mapper</title>
   <style>
     .hidden { display: none; }
     fieldset { margin-bottom: 1.25rem; }
@@ -21,19 +21,18 @@
 <body>
   <main role="main">
     <h1>Emotion Identification Tool</h1>
-    <p>Step through the form with keyboard or screen reader.</p>
 
     <form id="emotionForm" onsubmit="return false;">
       <!-- Step 1 -->
       <fieldset id="step1">
-        <legend>1. I Notice...</legend>
-        <div id="sensationsContainer"></div>
+        <legend>Sensations</legend>
+        <div id="sensationsContainer" role="region" area-label="Current sensations"></div>
         <button type="button" id="step1Btn">Next</button>
       </fieldset>
 
       <!-- Step 2 -->
       <fieldset id="step2" class="hidden" aria-live="polite" aria-atomic="true">
-        <legend class="sr-only">2. Core Emotions</legend>
+        <legend>Core Emotions</legend>
         <div id="emotionContainer" role="region" aria-label="Current core emotion"></div>
         <button type="button" id="prevEmotionBtn" aria-controls="emotionContainer">Back</button>
         <button type="button" id="nextEmotionBtn" aria-controls="emotionContainer">Next Emotion</button>
@@ -60,31 +59,36 @@
     const emotionContainer = document.getElementById('emotionContainer');
     const nextEmotionBtn = document.getElementById('nextEmotionBtn');
     const prevEmotionBtn = document.getElementById('prevEmotionBtn');
-    const summary = document.getElementById('summary');
+    const summaryContainer = document.getElementById('summary');
 
     let matchedEmotions = [];
     let currentEmotionIndex = 0;
     const selections = {
       sensationValues: [],
-      sensations: [],
+      emotions: [],
       nuanced: {},
       needs: {}
     };
 
     function generateSensations() {
       sensationsContainer.innerHTML = '';
-      Object.entries(dataset.sensations).forEach(([part, arr]) => {
-        const h2 = document.createElement('h2');
-        h2.textContent = part.charAt(0).toUpperCase() + part.slice(1);
-        sensationsContainer.appendChild(h2);
+      const h2 = document.createElement('h2');
+      h2.textContent = "I notice...";
+      h2.tabIndex = -1;
+      sensationsContainer.appendChild(h2);
 
-        arr.forEach(s => {
+      Object.entries(dataset.sensations).forEach(([part, arr]) => {
+        const h3 = document.createElement('h3');
+        h3.textContent = part.charAt(0).toUpperCase() + part.slice(1);
+        sensationsContainer.appendChild(h3);
+
+        arr.forEach(sensation => {
           const label = document.createElement('label');
           const input = document.createElement('input');
           input.type = 'checkbox';
-          input.value = s;
+          input.value = sensation;
           label.appendChild(input);
-          label.appendChild(document.createTextNode(' ' + s.replace(/-/g, ' ')));
+          label.appendChild(document.createTextNode(' ' + sensation.replace(/-/g, ' ')));
           sensationsContainer.appendChild(label);
           sensationsContainer.appendChild(document.createElement('br'));
         });
@@ -102,21 +106,22 @@
     step1Btn.addEventListener('click', () => {
       const checked = Array.from(document.querySelectorAll('#step1 input[type="checkbox"]:checked'));
       selections.sensationValues = checked.map(cb => cb.value);
-      selections.sensations = checked.map(cb => cb.parentElement.textContent.trim());
+      selections.emotions = checked.map(cb => cb.parentElement.textContent.trim());
 
       matchedEmotions = dataset.emotions.filter(emotion =>
-        emotion.sensations.some(s => selections.sensationValues.includes(s))
+        emotion.sensations.some(sensation => selections.sensationValues.includes(sensation))
       );
 
+      step1.classList.add('hidden');
+
       if (matchedEmotions.length === 0) {
-        summary.classList.remove('hidden');
-        summary.innerHTML = `<h2 id="summaryHeading" tabindex="-1">Summary</h2>
-          <p>No core emotions matched your sensations.</p>`;
+        summaryContainer.classList.remove('hidden');
+        summaryContainer.innerHTML = `<h2 id="summaryHeading" tabindex="-1">Summary</h2>
+          <p>You did not select any sensations. Refresh the page to start over.</p>`;
         document.getElementById('summaryHeading').focus();
         return;
       }
 
-      step1.classList.add('hidden');
       step2.classList.remove('hidden');
       currentEmotionIndex = 0;
       renderEmotion();
@@ -128,7 +133,7 @@
       emotionContainer.innerHTML = '';
 
       const h2 = document.createElement('h2');
-      h2.textContent = "2. I might be feeling…";
+      h2.textContent = "I feel...";
       h2.tabIndex = -1;
       emotionContainer.appendChild(h2);
 
@@ -143,18 +148,19 @@
       emotionContainer.appendChild(live);
 
       const allLabels = emotion.sensations.map(v => valueToLabel[v] || v);
-      const correlatedValues = emotion.sensations.filter(v => selections.sensationValues.includes(v));
-      const correlatedLabels = correlatedValues.map(v => valueToLabel[v] || v);
+      // const correlatedValues = emotion.sensations.filter(v => selections.sensationValues.includes(v));
+      // const correlatedLabels = correlatedValues.map(v => valueToLabel[v] || v);
       const p = document.createElement('p');
-      p.textContent = "Often embodied as: " + allLabels.join(', ') +
-                      (correlatedLabels.length ? ". Correlated with your selections: " + correlatedLabels.join(', ') : "");
+      p.textContent = "Often sensed as: " + allLabels.join(', ') +
+                      // (correlatedLabels.length ? ". Correlated with your selections: " + correlatedLabels.join(', ') : "");
+                      "";
       emotionContainer.appendChild(p);
 
       if (!Array.isArray(selections.nuanced[emotion.key])) selections.nuanced[emotion.key] = [];
       if (!Array.isArray(selections.needs[emotion.key])) selections.needs[emotion.key] = [];
 
       const nuanceLegend = document.createElement('h4');
-      nuanceLegend.textContent = "3. More specifically, I feel:";
+      nuanceLegend.textContent = "Specifically...";
       emotionContainer.appendChild(nuanceLegend);
       emotion.nuanced.forEach(n => {
         const cb = document.createElement('input');
@@ -172,7 +178,7 @@
       });
 
       const needsLegend = document.createElement('h4');
-      needsLegend.textContent = "4. I might need:";
+      needsLegend.textContent = "I need...";
       emotionContainer.appendChild(needsLegend);
       emotion.needs.forEach(n => {
         const cb = document.createElement('input');
@@ -225,17 +231,17 @@
 
     function renderSummary(){
       saveCurrentSelections(); // save last emotion selections
-      summary.innerHTML = ''; // clear previous
+      summaryContainer.innerHTML = ''; // clear previous
 
       const heading = document.createElement('h2');
       heading.id = 'summaryHeading';
       heading.tabIndex = -1;
-      heading.textContent = '5. To summarize, right now…';
-      summary.appendChild(heading);
+      heading.textContent = 'My current emotions are...';
+      summaryContainer.appendChild(heading);
 
       const pNotice = document.createElement('p');
-      pNotice.textContent = `I notice: ${selections.sensations.join(', ') || 'nothing selected'}.`;
-      summary.appendChild(pNotice);
+      pNotice.textContent = `I notice: ${selections.emotions.join(', ') || 'nothing selected'}.`;
+      summaryContainer.appendChild(pNotice);
 
       const selectedNuanced = Object.entries(selections.nuanced).filter(([,arr])=>arr.length).map(([k,arr]) => ({k,arr}));
       const selectedNeeds = Object.entries(selections.needs).filter(([,arr])=>arr.length).map(([k,arr]) => ({k,arr}));
@@ -247,8 +253,8 @@
           li.innerHTML = `<strong>${dataset.emotions.find(e=>e.key===k).label}:</strong> ${arr.join(', ')}`;
           ul.appendChild(li);
         });
-        summary.appendChild(document.createElement('h3')).textContent = 'Specifically, by emotion:';
-        summary.appendChild(ul);
+        summaryContainer.appendChild(document.createElement('h3')).textContent = 'Specifically, by emotion:';
+        summaryContainer.appendChild(ul);
       }
 
       if (selectedNeeds.length) {
@@ -258,15 +264,15 @@
           li.innerHTML = `<strong>${dataset.emotions.find(e=>e.key===k).label}:</strong> ${arr.join(', ')}`;
           ul.appendChild(li);
         });
-        summary.appendChild(document.createElement('h3')).textContent = 'Identified needs (by emotion):';
-        summary.appendChild(ul);
+        summaryContainer.appendChild(document.createElement('h3')).textContent = 'Identified needs (by emotion):';
+        summaryContainer.appendChild(ul);
       }
 
       const matchedLabels = matchedEmotions.map(e=>e.label);
       if (matchedLabels.length) {
         const pEmotions = document.createElement('p');
         pEmotions.textContent = `Core emotions suggested by your sensations: ${matchedLabels.join(', ')}.`;
-        summary.appendChild(pEmotions);
+        summaryContainer.appendChild(pEmotions);
       }
 
       // Add Back button
@@ -274,14 +280,14 @@
       backBtn.type = 'button';
       backBtn.textContent = 'Back';
       backBtn.addEventListener('click', () => {
-        summary.classList.add('hidden');
+        summaryContainer.classList.add('hidden');
         step2.classList.remove('hidden');
         renderEmotion();
       });
-      summary.appendChild(backBtn);
+      summaryContainer.appendChild(backBtn);
 
       setTimeout(()=> heading.focus(), 0);
-      summary.classList.remove('hidden');
+      summaryContainer.classList.remove('hidden');
     }
 
     loadDataset();
